--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
     "build": "snowpack build",
     "test": "echo \"This template does not include a test runner by default.\" && exit 1",
     "format": "prettier --write \"src/**/*.{ts,js}\"",
-    "lint": "prettier --check \"src/**/*.{ts,js}\""
+    "lint": "prettier --check \"src/**/*.{ts,js}\"",
+    "sass-dev": "sass --watch --update --style=expanded public/sass:public/css"
   },
   "dependencies": {
-    "canvas-confetti": "^1.2.0"
+    "canvas-confetti": "^1.2.0",
+    "leaflet": "^1.9.3"
   },
   "devDependencies": {
+    "@snowpack/plugin-sass": "^1.4.0",
     "@snowpack/plugin-typescript": "^1.2.1",
     "@types/canvas-confetti": "^1.0.0",
+    "@types/leaflet": "^1.9.0",
     "@types/snowpack-env": "^2.3.3",
     "prettier": "^2.2.1",
+    "sass": "^1.57.1",
     "snowpack": "^3.3.7",
     "typescript": "^4.2.4"
   }
